[gd_scene load_steps=9 format=3 uid="uid://duune1hxjmbip"]

[ext_resource type="Texture2D" uid="uid://b86wrbn2i47jo" path="res://assets/Enemies/Free Enemies/Free Enemies/Anim/Asimole 1A[anim].png" id="1_oevjk"]
[ext_resource type="Script" path="res://src/platforming/scripts/Enemies/level_6/asimole_enemy.gd" id="1_rje1j"]

[sub_resource type="Animation" id="Animation_f2hq3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player_Enemy_Collision/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-35, 43, -52, 34, -60, 35, -62, 35, -63, 34, -64, 22, -64, 17, -66, 3, -68, 1, -69, -1, -69, -3, -71, -3, -73, -4, -73, -8, -71, -10, -71, -11, -73, -13, -73, -18, -72, -18, -72, -24, -71, -26, -70, -28, -68, -28, -63, -29, -62, -30, -60, -31, -57, -34, -55, -35, -51, -35, -47, -36, -46, -37, -44, -38, -42, -39, -33, -39, -29, -40, -20, -40, -19, -39, -11, -38, -9, -40, -5, -40, 1, -41, 2, -42, 4, -43, 6, -44, 7, -45, 13, -46, 16, -46, 20, -45, 24, -44, 26, -43, 27, -42, 29, -42, 31, -43, 36, -43, 37, -42, 41, -41, 43, -40, 44, -38, 46, -36, 50, -35, 52, -33, 53, -31, 55, -29, 57, -28, 58, -27, 58, -25, 60, -25, 62, -23, 62, -21, 64, -21, 65, -20, 65, -18, 66, -18, 66, -14, 67, -14, 68, -13, 70, -12, 71, -10, 71, -5, 70, -2, 69, 3, 68, 5, 68, 10, 69, 11, 69, 14, 68, 17, 69, 19, 70, 20, 70, 23, 72, 26, 75, 29, 75, 34, 78, 36, 81, 37, 85, 38, 86, 39, 86, 41, 82, 42, 77, 43, 68, 43, 66, 44, 65, 46, 64, 48, 59, 48, 57, 47, 52, 47, 52, 43, 54, 40, 53, 36, 49, 34, 47, 33, 41, 32, 38, 31, 36, 30, 34, 29, 32, 28, 27, 27, 24, 26, 21, 26, 19, 27, 10, 27, 10, 28, 7, 29, 5, 29, 5, 31, 4, 32, 4, 38, 5, 39, 5, 42, 6, 42, 6, 44, 3, 44, 1, 43, -1, 42, -2, 41, -7, 41, -8, 42, -9, 44, -10, 45, -18, 45, -18, 46, -22, 46, -22, 47, -24, 48, -27, 48, -27, 45, -30, 45, -35, 45)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player_Enemy_Collision/CollisionPolygon2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_oivi6"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_o8ups"]
resource_name = "walking_left"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player_Enemy_Collision/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [PackedVector2Array(-35, 43, -52, 34, -60, 35, -62, 35, -63, 34, -64, 22, -64, 17, -66, 3, -68, 1, -69, -1, -69, -3, -71, -3, -73, -4, -73, -8, -71, -10, -71, -11, -73, -13, -73, -18, -72, -18, -72, -24, -71, -26, -70, -28, -68, -28, -63, -29, -62, -30, -60, -31, -57, -34, -55, -35, -51, -35, -47, -36, -46, -37, -44, -38, -42, -39, -33, -39, -29, -40, -20, -40, -19, -39, -11, -38, -9, -40, -5, -40, 1, -41, 2, -42, 4, -43, 6, -44, 7, -45, 13, -46, 16, -46, 20, -45, 24, -44, 26, -43, 27, -42, 29, -42, 31, -43, 36, -43, 37, -42, 41, -41, 43, -40, 44, -38, 46, -36, 50, -35, 52, -33, 53, -31, 55, -29, 57, -28, 58, -27, 58, -25, 60, -25, 62, -23, 62, -21, 64, -21, 65, -20, 65, -18, 66, -18, 66, -14, 67, -14, 68, -13, 70, -12, 71, -10, 71, -5, 70, -2, 69, 3, 68, 5, 68, 10, 69, 11, 69, 14, 68, 17, 69, 19, 70, 20, 70, 23, 72, 26, 75, 29, 75, 34, 78, 36, 81, 37, 85, 38, 86, 39, 86, 41, 82, 42, 77, 43, 68, 43, 66, 44, 65, 46, 64, 48, 59, 48, 57, 47, 52, 47, 52, 43, 54, 40, 53, 36, 49, 34, 47, 33, 41, 32, 38, 31, 36, 30, 34, 29, 32, 28, 27, 27, 24, 26, 21, 26, 19, 27, 10, 27, 10, 28, 7, 29, 5, 29, 5, 31, 4, 32, 4, 38, 5, 39, 5, 42, 6, 42, 6, 44, 3, 44, 1, 43, -1, 42, -2, 41, -7, 41, -8, 42, -9, 44, -10, 45, -18, 45, -18, 46, -22, 46, -22, 47, -24, 48, -27, 48, -27, 45, -30, 45, -35, 45), PackedVector2Array(-40, 40, -42, 40, -48, 41, -51, 41, -53, 38, -62, 31, -63, 30, -64, 21, -64, 15, -65, 2, -68, -1, -69, -3, -71, -5, -73, -6, -73, -10, -72, -11, -72, -14, -73, -15, -73, -20, -72, -20, -72, -26, -71, -26, -71, -28, -70, -28, -70, -30, -68, -30, -66, -29, -65, -28, -63, -29, -63, -31, -62, -32, -60, -33, -57, -36, -55, -37, -51, -37, -47, -38, -46, -39, -44, -40, -42, -41, -33, -41, -29, -42, -20, -42, -19, -41, -18, -39, -11, -38, -11, -40, -9, -42, -5, -42, -1, -42, 1, -43, 2, -44, 4, -45, 6, -46, 7, -47, 16, -47, 20, -46, 21, -45, 24, -44, 25, -43, 27, -43, 28, -44, 34, -44, 37, -43, 39, -43, 41, -43, 43, -42, 44, -41, 45, -40, 46, -38, 47, -35, 48, -34, 52, -33, 54, -32, 55, -31, 56, -29, 57, -28, 57, -26, 60, -26, 62, -24, 62, -22, 64, -22, 65, -21, 65, -19, 66, -19, 66, -15, 67, -15, 68, -14, 70, -13, 71, -11, 71, -6, 70, -3, 69, 2, 68, 5, 69, 10, 69, 13, 68, 16, 69, 18, 70, 19, 73, 19, 74, 17, 75, 16, 77, 16, 77, 27, 76, 29, 75, 30, 75, 34, 78, 35, 81, 36, 85, 37, 86, 38, 86, 40, 82, 41, 77, 42, 66, 42, 65, 41, 64, 39, 62, 38, 60, 37, 58, 35, 56, 34, 54, 33, 51, 32, 47, 32, 46, 35, 45, 36, 42, 37, 37, 38, 30, 38, 29, 37, 29, 32, 24, 34, 24, 38, 25, 38, 25, 40, 23, 40, 20, 38, 18, 38, 16, 38, 16, 41, 15, 43, 13, 45, 9, 46, 6, 47, 2, 48, -3, 48, -4, 46, -7, 47, -11, 47, -11, 45), PackedVector2Array(-44, 43, -45, 42, -48, 40, -52, 39, -53, 38, -62, 27, -63, 25, -64, 19, -64, 12, -65, 1, -68, -2, -69, -4, -71, -6, -73, -7, -73, -11, -72, -11, -72, -15, -73, -16, -73, -21, -72, -21, -72, -27, -71, -29, -70, -31, -68, -31, -66, -30, -65, -29, -63, -29, -63, -32, -62, -33, -60, -34, -57, -37, -55, -38, -51, -38, -47, -39, -46, -40, -44, -41, -42, -42, -33, -42, -31, -41, -29, -43, -20, -43, -19, -42, -19, -40, -18, -40, -17, -39, -12, -39, -11, -41, -9, -43, -5, -43, -1, -43, 2, -45, 4, -46, 6, -47, 7, -48, 16, -48, 16, -47, 20, -47, 21, -46, 21, -45, 27, -45, 27, -46, 32, -46, 34, -45, 34, -44, 37, -45, 39, -45, 40, -44, 40, -40, 43, -40, 46, -40, 47, -39, 48, -36, 50, -35, 51, -34, 53, -33, 55, -32, 57, -30, 57, -27, 60, -27, 62, -25, 62, -23, 64, -23, 65, -22, 66, -20, 67, -16, 68, -15, 70, -14, 71, -12, 71, -7, 70, -4, 69, 1, 68, 5, 69, 9, 69, 12, 68, 16, 70, 18, 70, 21, 69, 25, 71, 26, 72, 27, 74, 28, 74, 34, 78, 34, 78, 35, 81, 35, 81, 36, 85, 36, 86, 37, 86, 39, 82, 40, 77, 41, 68, 41, 66, 40, 52, 42, 51, 43, 49, 44, 46, 45, 40, 45, 36, 44, 36, 40, 27, 40, 27, 42, 26, 43, 24, 45, 19, 45, 17, 44, 17, 43, 13, 43, -11, 42, -13, 41, -24, 41, -27, 42, -39, 42, -39, 43), PackedVector2Array(-34, 44, -63, 27, -64, 22, -64, 12, -65, 2, -68, -1, -69, -3, -69, -5, -71, -5, -73, -6, -73, -10, -72, -11, -72, -14, -73, -15, -73, -20, -72, -21, -72, -26, -71, -28, -70, -30, -68, -30, -66, -29, -65, -28, -63, -29, -63, -31, -62, -32, -60, -33, -57, -36, -55, -37, -51, -37, -47, -38, -46, -39, -44, -40, -42, -41, -33, -41, -30, -41, -29, -42, -20, -42, -19, -41, -18, -39, -11, -39, -9, -41, -5, -41, -1, -41, 1, -42, 2, -43, 4, -44, 6, -45, 7, -46, 16, -46, 20, -45, 21, -44, 24, -45, 27, -45, 30, -44, 34, -43, 38, -43, 41, -40, 43, -38, 43, -37, 47, -37, 48, -36, 49, -35, 50, -33, 51, -32, 53, -31, 54, -30, 56, -29, 57, -28, 58, -27, 58, -25, 60, -25, 62, -23, 62, -21, 64, -21, 65, -20, 66, -18, 66, -14, 67, -14, 68, -13, 70, -12, 71, -10, 71, -5, 70, -2, 69, 3, 68, 7, 69, 11, 72, 12, 74, 12, 74, 19, 73, 23, 72, 27, 73, 30, 74, 34, 78, 35, 81, 36, 85, 37, 86, 38, 86, 40, 82, 41, 77, 42, 68, 42, 66, 41, 44, 46, 39, 46, 38, 45, 33, 45, 32, 44, 32, 42, -1, 39, -3, 41, -7, 42, -10, 43, -14, 44, -19, 44, -24, 47, -26, 47, -32, 48, -34, 48)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player_Enemy_Collision/CollisionPolygon2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ohq5n"]
resource_name = "walking_right"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player_Enemy_Collision/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [PackedVector2Array(-35, 43, -52, 34, -60, 35, -62, 35, -63, 34, -64, 22, -64, 17, -66, 3, -68, 1, -69, -1, -69, -3, -71, -3, -73, -4, -73, -8, -71, -10, -71, -11, -73, -13, -73, -18, -72, -18, -72, -24, -71, -26, -70, -28, -68, -28, -63, -29, -62, -30, -60, -31, -57, -34, -55, -35, -51, -35, -47, -36, -46, -37, -44, -38, -42, -39, -33, -39, -29, -40, -20, -40, -19, -39, -11, -38, -9, -40, -5, -40, 1, -41, 2, -42, 4, -43, 6, -44, 7, -45, 13, -46, 16, -46, 20, -45, 24, -44, 26, -43, 27, -42, 29, -42, 31, -43, 36, -43, 37, -42, 41, -41, 43, -40, 44, -38, 46, -36, 50, -35, 52, -33, 53, -31, 55, -29, 57, -28, 58, -27, 58, -25, 60, -25, 62, -23, 62, -21, 64, -21, 65, -20, 65, -18, 66, -18, 66, -14, 67, -14, 68, -13, 70, -12, 71, -10, 71, -5, 70, -2, 69, 3, 68, 5, 68, 10, 69, 11, 69, 14, 68, 17, 69, 19, 70, 20, 70, 23, 72, 26, 75, 29, 75, 34, 78, 36, 81, 37, 85, 38, 86, 39, 86, 41, 82, 42, 77, 43, 68, 43, 66, 44, 65, 46, 64, 48, 59, 48, 57, 47, 52, 47, 52, 43, 54, 40, 53, 36, 49, 34, 47, 33, 41, 32, 38, 31, 36, 30, 34, 29, 32, 28, 27, 27, 24, 26, 21, 26, 19, 27, 10, 27, 10, 28, 7, 29, 5, 29, 5, 31, 4, 32, 4, 38, 5, 39, 5, 42, 6, 42, 6, 44, 3, 44, 1, 43, -1, 42, -2, 41, -7, 41, -8, 42, -9, 44, -10, 45, -18, 45, -18, 46, -22, 46, -22, 47, -24, 48, -27, 48, -27, 45, -30, 45, -35, 45), PackedVector2Array(-40, 40, -42, 40, -48, 41, -51, 41, -53, 38, -62, 31, -63, 30, -64, 21, -64, 15, -65, 2, -68, -1, -69, -3, -71, -5, -73, -6, -73, -10, -72, -11, -72, -14, -73, -15, -73, -20, -72, -20, -72, -26, -71, -26, -71, -28, -70, -28, -70, -30, -68, -30, -66, -29, -65, -28, -63, -29, -63, -31, -62, -32, -60, -33, -57, -36, -55, -37, -51, -37, -47, -38, -46, -39, -44, -40, -42, -41, -33, -41, -29, -42, -20, -42, -19, -41, -18, -39, -11, -38, -11, -40, -9, -42, -5, -42, -1, -42, 1, -43, 2, -44, 4, -45, 6, -46, 7, -47, 16, -47, 20, -46, 21, -45, 24, -44, 25, -43, 27, -43, 28, -44, 34, -44, 37, -43, 39, -43, 41, -43, 43, -42, 44, -41, 45, -40, 46, -38, 47, -35, 48, -34, 52, -33, 54, -32, 55, -31, 56, -29, 57, -28, 57, -26, 60, -26, 62, -24, 62, -22, 64, -22, 65, -21, 65, -19, 66, -19, 66, -15, 67, -15, 68, -14, 70, -13, 71, -11, 71, -6, 70, -3, 69, 2, 68, 5, 69, 10, 69, 13, 68, 16, 69, 18, 70, 19, 73, 19, 74, 17, 75, 16, 77, 16, 77, 27, 76, 29, 75, 30, 75, 34, 78, 35, 81, 36, 85, 37, 86, 38, 86, 40, 82, 41, 77, 42, 66, 42, 65, 41, 64, 39, 62, 38, 60, 37, 58, 35, 56, 34, 54, 33, 51, 32, 47, 32, 46, 35, 45, 36, 42, 37, 37, 38, 30, 38, 29, 37, 29, 32, 24, 34, 24, 38, 25, 38, 25, 40, 23, 40, 20, 38, 18, 38, 16, 38, 16, 41, 15, 43, 13, 45, 9, 46, 6, 47, 2, 48, -3, 48, -4, 46, -7, 47, -11, 47, -11, 45), PackedVector2Array(-44, 43, -45, 42, -48, 40, -52, 39, -53, 38, -62, 27, -63, 25, -64, 19, -64, 12, -65, 1, -68, -2, -69, -4, -71, -6, -73, -7, -73, -11, -72, -11, -72, -15, -73, -16, -73, -21, -72, -21, -72, -27, -71, -29, -70, -31, -68, -31, -66, -30, -65, -29, -63, -29, -63, -32, -62, -33, -60, -34, -57, -37, -55, -38, -51, -38, -47, -39, -46, -40, -44, -41, -42, -42, -33, -42, -31, -41, -29, -43, -20, -43, -19, -42, -19, -40, -18, -40, -17, -39, -12, -39, -11, -41, -9, -43, -5, -43, -1, -43, 2, -45, 4, -46, 6, -47, 7, -48, 16, -48, 16, -47, 20, -47, 21, -46, 21, -45, 27, -45, 27, -46, 32, -46, 34, -45, 34, -44, 37, -45, 39, -45, 40, -44, 40, -40, 43, -40, 46, -40, 47, -39, 48, -36, 50, -35, 51, -34, 53, -33, 55, -32, 57, -30, 57, -27, 60, -27, 62, -25, 62, -23, 64, -23, 65, -22, 66, -20, 67, -16, 68, -15, 70, -14, 71, -12, 71, -7, 70, -4, 69, 1, 68, 5, 69, 9, 69, 12, 68, 16, 70, 18, 70, 21, 69, 25, 71, 26, 72, 27, 74, 28, 74, 34, 78, 34, 78, 35, 81, 35, 81, 36, 85, 36, 86, 37, 86, 39, 82, 40, 77, 41, 68, 41, 66, 40, 52, 42, 51, 43, 49, 44, 46, 45, 40, 45, 36, 44, 36, 40, 27, 40, 27, 42, 26, 43, 24, 45, 19, 45, 17, 44, 17, 43, 13, 43, -11, 42, -13, 41, -24, 41, -27, 42, -39, 42, -39, 43), PackedVector2Array(-34, 44, -63, 27, -64, 22, -64, 12, -65, 2, -68, -1, -69, -3, -69, -5, -71, -5, -73, -6, -73, -10, -72, -11, -72, -14, -73, -15, -73, -20, -72, -21, -72, -26, -71, -28, -70, -30, -68, -30, -66, -29, -65, -28, -63, -29, -63, -31, -62, -32, -60, -33, -57, -36, -55, -37, -51, -37, -47, -38, -46, -39, -44, -40, -42, -41, -33, -41, -30, -41, -29, -42, -20, -42, -19, -41, -18, -39, -11, -39, -9, -41, -5, -41, -1, -41, 1, -42, 2, -43, 4, -44, 6, -45, 7, -46, 16, -46, 20, -45, 21, -44, 24, -45, 27, -45, 30, -44, 34, -43, 38, -43, 41, -40, 43, -38, 43, -37, 47, -37, 48, -36, 49, -35, 50, -33, 51, -32, 53, -31, 54, -30, 56, -29, 57, -28, 58, -27, 58, -25, 60, -25, 62, -23, 62, -21, 64, -21, 65, -20, 66, -18, 66, -14, 67, -14, 68, -13, 70, -12, 71, -10, 71, -5, 70, -2, 69, 3, 68, 7, 69, 11, 72, 12, 74, 12, 74, 19, 73, 23, 72, 27, 73, 30, 74, 34, 78, 35, 81, 36, 85, 37, 86, 38, 86, 40, 82, 41, 77, 42, 68, 42, 66, 41, 44, 46, 39, 46, 38, 45, 33, 45, 32, 44, 32, 42, -1, 39, -3, 41, -7, 42, -10, 43, -14, 44, -19, 44, -24, 47, -26, 47, -32, 48, -34, 48)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player_Enemy_Collision/CollisionPolygon2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qymdd"]
_data = {
"RESET": SubResource("Animation_f2hq3"),
"idle": SubResource("Animation_oivi6"),
"walking_left": SubResource("Animation_o8ups"),
"walking_right": SubResource("Animation_ohq5n")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tsmit"]
size = Vector2(153, 1)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_rje1j")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_oevjk")
offset = Vector2(0, -20)
hframes = 4
vframes = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_qymdd")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10.5, 48.5)
shape = SubResource("RectangleShape2D_tsmit")

[node name="MovementTimer" type="Timer" parent="."]

[node name="Player_Enemy_Collision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player_Enemy_Collision"]
polygon = PackedVector2Array(-35, 43, -52, 34, -60, 35, -62, 35, -63, 34, -64, 22, -64, 17, -66, 3, -68, 1, -69, -1, -69, -3, -71, -3, -73, -4, -73, -8, -71, -10, -71, -11, -73, -13, -73, -18, -72, -18, -72, -24, -71, -26, -70, -28, -68, -28, -63, -29, -62, -30, -60, -31, -57, -34, -55, -35, -51, -35, -47, -36, -46, -37, -44, -38, -42, -39, -33, -39, -29, -40, -20, -40, -19, -39, -11, -38, -9, -40, -5, -40, 1, -41, 2, -42, 4, -43, 6, -44, 7, -45, 13, -46, 16, -46, 20, -45, 24, -44, 26, -43, 27, -42, 29, -42, 31, -43, 36, -43, 37, -42, 41, -41, 43, -40, 44, -38, 46, -36, 50, -35, 52, -33, 53, -31, 55, -29, 57, -28, 58, -27, 58, -25, 60, -25, 62, -23, 62, -21, 64, -21, 65, -20, 65, -18, 66, -18, 66, -14, 67, -14, 68, -13, 70, -12, 71, -10, 71, -5, 70, -2, 69, 3, 68, 5, 68, 10, 69, 11, 69, 14, 68, 17, 69, 19, 70, 20, 70, 23, 72, 26, 75, 29, 75, 34, 78, 36, 81, 37, 85, 38, 86, 39, 86, 41, 82, 42, 77, 43, 68, 43, 66, 44, 65, 46, 64, 48, 59, 48, 57, 47, 52, 47, 52, 43, 54, 40, 53, 36, 49, 34, 47, 33, 41, 32, 38, 31, 36, 30, 34, 29, 32, 28, 27, 27, 24, 26, 21, 26, 19, 27, 10, 27, 10, 28, 7, 29, 5, 29, 5, 31, 4, 32, 4, 38, 5, 39, 5, 42, 6, 42, 6, 44, 3, 44, 1, 43, -1, 42, -2, 41, -7, 41, -8, 42, -9, 44, -10, 45, -18, 45, -18, 46, -22, 46, -22, 47, -24, 48, -27, 48, -27, 45, -30, 45, -35, 45)

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(91, 39)
target_position = Vector2(30, 0)
collision_mask = 5
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2(91, -34)
target_position = Vector2(30, 0)
collision_mask = 5
collide_with_areas = true

[node name="RayCast2D3" type="RayCast2D" parent="."]
position = Vector2(-72, 33)
target_position = Vector2(-30, 0)
collision_mask = 5
collide_with_areas = true

[node name="RayCast2D4" type="RayCast2D" parent="."]
position = Vector2(-72, -34)
target_position = Vector2(-30, 0)
collision_mask = 5
collide_with_areas = true

[node name="RayCast2D5" type="RayCast2D" parent="."]
position = Vector2(91, 48)
target_position = Vector2(0, 10)

[node name="RayCast2D6" type="RayCast2D" parent="."]
position = Vector2(-71, 47)
target_position = Vector2(0, 10)

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="body_entered" from="Player_Enemy_Collision" to="." method="_on_player_enemy_collision_body_entered"]
